fixed help overflow issue

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ border-color:#66FCF1;
 display:flex;
 flex-direction:column;
 gap:3em;
+overflow-y:scroll;
 }
 
 #submitform {
